# medman

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Purpose.md  README.md  TESTING.md  docker-compose.yml  setup.sh  test_registration.sh
.github/workflows/: build-docker.yml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  i18n.js  main.js  stores.js  style.css
frontend/src/assets/: main.css
frontend/src/components/: BaseIcon.vue  DeviceShell.vue  Dock.vue  Header.vue  LangSelect.vue  MoodFaces.vue  Navbar.vue  Spark.vue  StatusBar.vue
frontend/src/locales/: de.json  en.json  fr.json
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js
frontend/src/views/: ChatView.vue  DashboardView.vue  GeneratePlanView.vue  HomeView.vue  InsightsView.vue  LoginView.vue  PlanView.vue  RegisterView.vue  ReviewView.vue  TrackView.vue
release/: docker-compose.yaml
src/: auth.rs  database.rs  error.rs  main.rs  models.rs
src/routes/: auth.rs  checkins.rs  health.rs  insights.rs  medication.rs  mod.rs  not_found.rs  plans.rs
