[package]
name = "medman-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = {version = "3", features = ["tracing-unstable"] }
bson = "2.8"
jsonwebtoken = "9.3"
bcrypt = "0.15"
dotenv = "0.15"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
log = "0.4"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["chrono", "json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
